--- a/client/DBmovieClient/src/Reviewlist/Reviewlist.scss
+++ b/client/DBmovieClient/src/Reviewlist/Reviewlist.scss
@@ -36,7 +36,7 @@
             display: flex;
             height: 100%;
             width: 100%;
-            flex-direction: column;
+            flex-direction: row;
             box-sizing: border-box;
             padding: 40px;
            
